## $Id$
## process this file with automake to create Makefile.in
## (You should run ./autogen.sh from the top level directory)

scwmrc_DATA = system.scwmrc gjb.scwmrc decor.scwmrc juhp.scwmrc sds.scwmrc \
             mstachow.scwmrc robbe.scwmrc simple.scwmrc

EXTRA_DIST = $(scwmrc_DATA) ChangeLog
