## $Id$
## process this file with automake to create Makefile.in

bin_PROGRAMS = scwm

## FIXMS: Alphabetize these
scwm_SOURCES =  string_token.c \
                ICCCM.c \
                system.c \
                Grab.c \
                add_window.c \
                borders.c \
                colormaps.c \
                colors.c \
                complex.c \
                decorations.c \
                events.c \
                focus.c \
                scwm.c \
                xproperty.c \
                icons.c \
                xmisc.c \
                move.c \
                placement.c \
                resize.c \
                virtual.c \
                scmtypes.c \
                font.c \
                color.c \
                miscprocs.c \
                binding.c \
                errors.c \
                util.c \
                window.c \
                scwmmenu.c \
                drawmenu.c \
                menuitem.c \
                deskpage.c \
                decor.c \
                face.c \
                module-interface.c \
                image.c \
                callbacks.c \
                shutdown.c \
                init_scheme_string.c \
		constraint-primitives.c \
		scwm-constraints.c \
                guile-compat.c \
                syscompat.c \
		getopt.c \
		getopt1.c

noinst_HEADERS = Grab.h ICCCM.h add_window.h binding.h borders.h \
callbacks.h color.h colormaps.h colors.h complex.h decor.h \
decorations.h deskpage.h drawmenu.h errors.h events.h face.h focus.h \
font.h getopt.h guile-compat.h icons.h image.h menuitem.h \
miscprocs.h module-interface.h module-types.h move.h mwmcom.h \
placement.h resize.h scmtypes.h screen.h scwm.h \
scwm-constraints.h constraint-primitives.h \
scwmmenu.h shutdown.h string_token.h syscompat.h system.h \
util.h virtual.h window.h xmisc.h


scwm_LDADD = @x_ldflags@ @XEXT_LIB@ @XPM_LIB@ @x_libs@ @GUILE_LIBS@ @CASSOWARY_LIBS@

INCLUDES = @x_cflags@ @GUILE_INCLUDES@ @CASSOWARY_INCLUDES@

BUILT_SOURCES = init_scheme_string.c scwmpaths.h \
binding.x callbacks.x color.x constraint-primitives.x \
decor.x deskpage.x events.x face.x font.x image.x menuitem.x \
miscprocs.x module-interface.x placement.x scwmmenu.x shutdown.x xproperty.x window.x

##OMIT_DEPENDENCIES = $(BUILT_SOURCES)

## This is how guile does it:
## (Sadly it does not work with Automake 1.2f)
## Add -MG to make the .x magic work with auto-dep code.
## MKDEP = gcc -M -MG $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)

SUFFIXES = .x


# just use `make CC=g++' and the revised guile-snarf which uses ${CC} will work
# for C++ prototype extraction
%.x: %.c
	guile-snarf $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS) $< > $@

## FIXMS: This really sucks, but it's the best we can do until
## Automake gets a way to compute dependencies with -MG
## scwm.o: scwmpaths.h
## callbacks.o: callbacks.x
## color.o: color.x
## font.o: font.x
## image.o: scwmpaths.h image.x
## menuitem.o: menuitem.x
## module-interface.o: module-interface.x
## scwmmenu.o: scwmmenu.x
## shutdown.o: shutdown.x


init_scheme_string.c: ../scheme/minimal.scm
	( echo "char *init_scheme_string = \"\\" ; \
	  sed -e 's/;.*$$//g' -e 's/"/\\"/g' -e "s/'/\\\\'/g" -e 's/$$/\\n\\/' ; \
	  echo \"\; ) <$< > $@

scwmpaths.h: ../config.status
	@echo "Generating scwmpaths.h..." 
	@rm -f scwmpaths.tmp
	@echo '/* generated by Makefile */' > scwmpaths.tmp
	@echo '#define SCWMDIR "@scwmrcdir@"' >> scwmpaths.tmp
	@echo '#define SCWMRC ".$(PACKAGE)rc"' >> scwmpaths.tmp
	@echo '#define SCWM_LOAD_PATH "@scwm_load_path@"' >> scwmpaths.tmp
	@echo '#define SCWM_IMAGE_LOAD_PATH "@scwm_image_load_path@"' >> scwmpaths.tmp
	@mv scwmpaths.tmp scwmpaths.h

CLEANFILES = scwmpaths.h init_scheme_string.c $(BUILT_SOURCES)

# Want etags to mark SCM_SYMBOL macros and SCWM_PROC macros
# Note that we mark through the 2nd argument to SCWM_PROC so we
# get the scheme procedure name, too (not just the C function name)
ETAGS_ARGS = --regex='/[ \t]*SCM_SYMBOL[ \t]*(\([^,]*\)/\1/' --regex='/[ \t]*SCWM_PROC[ \t]*(\([^,]*\),[^,]*/\1/' *.[ch]
