## $Id$
## process this file with automake to create Makefile.in

## Distribute and install
scwm_theme_DATA = fvwm2.@TAR_SUFFIX@ mwm.@TAR_SUFFIX@ win95.@TAR_SUFFIX@

fvwm2.@TAR_SUFFIX@: fvwm2 fvwm2/*
	$(TAR_CF) fvwm2.@TAR_SUFFIX@ fvwm2

mwm.@TAR_SUFFIX@: mwm mwm/*
	$(TAR_CF) mwm.@TAR_SUFFIX@ mwm

win95.@TAR_SUFFIX@: win95 win95/*
	$(TAR_CF) win95.@TAR_SUFFIX@ win95


